--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,9 @@
 services:
   - type: web
     name: ojt-system
-    env: php
+    env: docker
     plan: free
-    buildCommand: ""
-    startCommand: php -S 0.0.0.0:10000
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: DB_HOST
         value: dpg-d4fnncvpmn1nc73f3k1rg-a.singapore-postgres.render.com
